# pipx-bug-test-project

./: COPYING  pyproject.toml  setup.cfg
src/ellipsix/pipxbugtest/: main.py
