[metadata]
name = ellipsix.pipxbugtest
author = David Zaslavsky
author_email = diazona@ellipsix.net
description = A mostly-empty test project for testing an apparent bug in pipx
url = https://github.com/diazona/pipxbugtest
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pipx-test-script = ellipsix.pipxbugtest.main:main
 
